--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,14 @@
+@import "customClass";
+@import "header";
+@import "dryaged";
+@import "fleischversand";
+
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+
+    html{
+        scroll-behavior: smooth;
+    }
 }
