--- a/sass/style.css
+++ b/sass/style.css
@@ -1,5 +1,85 @@
+.maxWidth {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.hItems .navBar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #B50014;
+}
+.hItems .navBar .nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  gap: 1em;
+}
+.hItems .navBar .nav .navItems .navLink {
+  text-decoration: none;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 700;
+}
+.hItems .navBar .nav .navItems .download {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.3em;
+}
+.hItems .workTime {
+  background-color: #252525;
+  padding: 0.8em 0;
+  font-size: 14px;
+  color: #fff;
+  text-align: right;
+}
+.hItems .hero {
+  background-image: url("../img/headerIMG.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 50vh;
+}
+.hItems .hero .heroText {
+  position: relative;
+  top: 40%;
+  background-color: rgba(0, 0, 0, 0.3);
+  max-width: 650px;
+  padding: 2em;
+}
+.hItems .hero .heroText h2 {
+  font-size: 2em;
+  color: #fff;
+}
+.hItems .hero .heroText p {
+  font-size: 1em;
+  color: #fff;
+  font-weight: 300;
+  text-align: right;
+}
+
+.dryAged {
+  background-color: black;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fleischversand {
+  background-color: rgb(166, 33, 32);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+* html {
+  scroll-behavior: smooth;
 }
