--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,6 @@
-@import "customClass";
 @import "header";
 @import "dryaged";
-@import "fleischversand";
+@import "grillkurs";
 
 *{
     padding: 0;
