--- a/sass/_grillkurs.scss
+++ b/sass/_grillkurs.scss
@@ -1,7 +1,6 @@
-.fleischversand{
+.grillkurs{
     background-color: rgba(166, 33, 32, 1);
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
