--- a/sass/_dh.scss
+++ b/sass/_dh.scss
@@ -2,7 +2,7 @@
     text-align: center;
     color: #fff;
     background-color: #000;
-    padding: 4em 0;
+    padding-top: 6em;
 
     .top{
         h2{
@@ -44,7 +44,7 @@
         justify-content: center;
         align-content: center;
         gap: 1em;
-        padding-bottom: 6em;
+        padding-bottom: 16em;
     }
 
 }
