--- a/sass/_fleischversand.scss
+++ b/sass/_fleischversand.scss
@@ -1,7 +1,30 @@
 .fleischversand { 
-    height: 70vh;
+    height: 50vh;
     background-image: url("../img/krmetina.png");
     background-color: black;
     background-repeat: no-repeat;
     background-position: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+    h2{
+        font-size: 2em;
+        padding-bottom: 1em;
+        font-weight: 700;
+        color: #fff;
+    }
+
+    .flbtn{
+        font-size: 1em;
+        padding: 0.7em 3em;
+        background-color: #fff;
+        color: #000;
+        border: 1px solid #FF0000;
+        border-radius: 2em;
+        max-width: 375px;
+        margin: 0 auto;
+    }
 }
