--- a/sass/_grillkurs.scss
+++ b/sass/_grillkurs.scss
@@ -1,3 +1,54 @@
 .grillkurs{
     display: flex;
+    background-color: #A62120;
+
+    .grillleft{
+        color: #fff;
+        flex: 50%;
+        align-self: center;
+        text-align: center;
+        .glTxt{
+            max-width: 480px;
+            margin: 0 auto;
+            text-align: start;
+            h2{
+                font-size: 2em;
+                padding-bottom: 1em;
+            }
+
+            ul{
+                li{
+                    font-size: 5px;
+                    line-height: 4em;
+                    .lItem{
+                        font-size: 2.5em;
+                        padding-left: 0.2em;
+                        font-weight: 300;
+                    }
+                }
+            }
+
+            .grillbtn{
+                border: 1px solid #FF0000;
+                border-radius: 2em;
+                padding: 0.7em 3em;
+                margin-top: 2em;
+                background-color: #fff;
+                color: #000;
+            }
+        }
+
+
+    }
+
+    .grillright{
+        flex: 50%;
+        justify-content: flex-end;
+        img{
+            display: block;
+
+        }
+
+    }
+
 }
