--- a/sass/style.css
+++ b/sass/style.css
@@ -105,13 +105,53 @@
 
 .grillkurs {
   display: flex;
+  background-color: #A62120;
+}
+.grillkurs .grillleft {
+  color: #fff;
+  flex: 50%;
+  align-self: center;
+  text-align: center;
+}
+.grillkurs .grillleft .glTxt {
+  max-width: 480px;
+  margin: 0 auto;
+  text-align: start;
+}
+.grillkurs .grillleft .glTxt h2 {
+  font-size: 2em;
+  padding-bottom: 1em;
+}
+.grillkurs .grillleft .glTxt ul li {
+  font-size: 5px;
+  line-height: 4em;
+}
+.grillkurs .grillleft .glTxt ul li .lItem {
+  font-size: 2.5em;
+  padding-left: 0.2em;
+  font-weight: 300;
+}
+.grillkurs .grillleft .glTxt .grillbtn {
+  border: 1px solid #FF0000;
+  border-radius: 2em;
+  padding: 0.7em 3em;
+  margin-top: 2em;
+  background-color: #fff;
+  color: #000;
+}
+.grillkurs .grillright {
+  flex: 50%;
+  justify-content: flex-end;
+}
+.grillkurs .grillright img {
+  display: block;
 }
 
 .dh {
   text-align: center;
   color: #fff;
   background-color: #000;
-  padding: 4em 0;
+  padding-top: 6em;
 }
 .dh .top h2 {
   font-size: 2em;
@@ -146,15 +186,35 @@
   justify-content: center;
   align-content: center;
   gap: 1em;
-  padding-bottom: 6em;
+  padding-bottom: 16em;
 }
 
 .fleischversand {
-  height: 70vh;
+  height: 50vh;
   background-image: url("../img/krmetina.png");
   background-color: black;
   background-repeat: no-repeat;
   background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.fleischversand h2 {
+  font-size: 2em;
+  padding-bottom: 1em;
+  font-weight: 700;
+  color: #fff;
+}
+.fleischversand .flbtn {
+  font-size: 1em;
+  padding: 0.7em 3em;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #FF0000;
+  border-radius: 2em;
+  max-width: 375px;
+  margin: 0 auto;
 }
 
 * {
