--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,19 @@
 .hItems {
   .navBar {
+    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: #b50014;
+
+    .navLogo{
+      position: absolute;
+      left: 15%;
+      top: 10%;
+    }
+
     .nav {
+      padding: 2em 0;
       display: flex;
       flex-direction: row;
       justify-content: center;
