--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,10 @@
 @import "dryaged";
 @import "grillkurs";
 @import "dh";
+@import "custome";
 @import "fleischversand";
+@import "endSection";
+@import "footer";
 
 *{
     padding: 0;
