--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,7 +1,61 @@
 footer{
     background-color: #B50014;
-    .location{
+
+    .container{
         display: flex;
-        align-items: start;
+        justify-content: space-around;
+        align-items: center;
+
+
+        .contact{
+            display: flex;
+            flex-direction: column;
+            gap: 0.7em;
+            .location{
+                display: flex;
+                gap: 0.3em;
+                align-items: start;
+                color: #fff;
+
+            }
+
+            .displayProop{
+                display: flex;
+                gap: 0.3em;
+                align-items: center;
+                color: #fff;
+            }
+        }
+
+        .social{
+            display: flex;
+            gap: 0.7em;
+            align-items: center;
+            .socialP{
+                font-size: 1em;
+                color: #fff;
+            }
+
+            .socialIcons{
+                display: flex;
+                gap: 0.5em;
+            }
+        }
+    }
+
+    .dimmedtrack{
+        display: flex;
+        justify-content: space-around;
+        background-color: rgba($color: #000000, $alpha: 0.5);
+        font-size: 12px;
+        color: rgba($color: #fff, $alpha: 0.5);
+        padding: 0.5em 0;
+
+        .studioPresent{
+            font-style: italic;
+            text-decoration: underline;
+            color: rgba($color: #fff, $alpha: 0.7);
+        }
+
     }
 }
