--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,15 +1,15 @@
 .hItems {
   .navBar {
-    position: relative;
     display: flex;
-    justify-content: space-around;
+    gap: 2em;
+    justify-content: center;
     align-items: center;
     background-color: #b50014;
+    height: 4em;
 
-    .navLogo{
-      position: absolute;
-      left: 15%;
-      top: 10%;
+    #logo{
+      margin-top: 7em;
+      z-index: 1;
     }
 
     .nav {
@@ -53,6 +53,7 @@
   }
 
   .hero {
+    position: relative;
     background-image: url("../img/headerIMG.jpg");
     background-repeat: no-repeat;
     background-size: calc(100%);
@@ -60,20 +61,23 @@
 
     .heroText {
       position: absolute;
-      top: 50%;
+      top: 30%;
       background-color: rgba(0, 0, 0, 0.3);
       max-width: 650px;
       padding: 2em;
       h2 {
         font-size: 2em;
         color: #fff;
+        text-align: right;
       }
 
       p {
+        max-width: 230px;
+        margin: 0 auto;
+        text-align: left;
         font-size: 1em;
         color: #fff;
         font-weight: 300;
-        text-align: right;
       }
     }
   }
