--- a/sass/_custome.scss
+++ b/sass/_custome.scss
@@ -7,7 +7,7 @@
         flex: 50%;
         img{
             display: block;
-            width: 90%;
+            width: 100%;
         }
     }
 
@@ -18,6 +18,18 @@
         .crTxt{
             max-width: 480px;
             margin: 0 auto;
+            font-weight: 300;
+            line-height: 1.5em;
+            text-align: left;
+
+            h2{
+                font-size: 2em;
+                padding-bottom: 0.5em;
+            }
+            h3{
+                font-size: 1.4em;
+                padding-bottom: 1em;
+            }
         }
     }
 }
