--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -34,6 +34,7 @@
           flex-direction: row;
           align-items: center;
           gap: 0.3em;
+          font-size: 14px;
         }
       }
     }
@@ -54,30 +55,36 @@
 
   .hero {
     position: relative;
-    background-image: url("../img/headerIMG.jpg");
-    background-repeat: no-repeat;
-    background-size: calc(100%);
-    height: 70vh;
-
+    img{
+      display: block;
+      width: 100%;
+    }
     .heroText {
       position: absolute;
       top: 30%;
       background-color: rgba(0, 0, 0, 0.3);
       max-width: 650px;
-      padding: 2em;
+      padding: 3em;
+      padding-left: 15em;
       h2 {
-        font-size: 2em;
+        max-width: 280px;
+        margin: 0 auto;
+        font-size: 2.2em;
         color: #fff;
-        text-align: right;
+        text-align: left;
+        font-weight: 700;
+        line-height: 1.2em;
+        padding-bottom: 0.8em;
       }
 
       p {
-        max-width: 230px;
+        max-width: 280px;
         margin: 0 auto;
         text-align: left;
         font-size: 1em;
         color: #fff;
         font-weight: 300;
+        line-height: 1.5em;
       }
     }
   }
