--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,8 @@
 @import "custome";
 @import "fleischversand";
 @import "genussnetz";
+@import "award";
+@import "comments";
 @import "footer";
 
 *{
