--- a/sass/_dryaged.scss
+++ b/sass/_dryaged.scss
@@ -66,3 +66,13 @@
         }
     }
 }
+
+// @media only screen and (max-width: 1325px){
+//     .dryAged{
+//         flex-direction: column;
+
+//         .daRight{
+//             margin: 0 auto;
+//         }
+//     }
+// }
