--- a/sass/_genussnetz.scss
+++ b/sass/_genussnetz.scss
@@ -1,6 +1,7 @@
 .genussnetz{
     background-color: #000;
     text-align: center;
+    padding: 8em 0;
 
     .geContent{
         color: #fff;
@@ -8,10 +9,26 @@
         align-items: center;
         justify-content: center;
         gap: 20em;
-        padding: 5em 0;
+        padding: 8em 0;
 
         .geTxt{
             text-align: left;
+
+            h2{
+                font-size: 2em;
+                line-height: 42px;
+                padding-bottom: 1em;
+            }
+
+            .gebtn{
+                padding: 0.7em 2.5em;
+                border: 1px solid #fff;
+                border-radius: 2em;
+                background-color: rgba(166, 33, 32, 1);
+                font-size: 1em;
+                font-weight: 400;
+                color: #fff;
+            }
         }
     }
 }
