--- a/sass/_dh.scss
+++ b/sass/_dh.scss
@@ -40,6 +40,15 @@
     }
 
     .bot{
+        .g1{
+            display: flex;
+            gap: 1em;
+        }
+
+        .g2{
+            display: flex;
+            gap: 1em;
+        }
         display: flex;
         justify-content: center;
         align-content: center;
@@ -47,6 +56,17 @@
         padding-bottom: 16em;
     }
 
+}
+
+@media only screen and (max-width: 1150px) {
+    .dh{
+        .bot{
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    
 }
 
 
