--- a/sass/_dryaged.scss
+++ b/sass/_dryaged.scss
@@ -67,12 +67,48 @@
     }
 }
 
-// @media only screen and (max-width: 1325px){
-//     .dryAged{
-//         flex-direction: column;
 
-//         .daRight{
-//             margin: 0 auto;
-//         }
-//     }
-// }
+
+@media only screen and (max-width: 1100px){
+    .dryAged{
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+
+        .daRight{
+            margin: 0 auto;
+            padding: 4em 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .dryAged{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        .daLeft{
+    
+            .daTxt{
+                .daButtons{
+                    align-items: center;
+                }
+            }
+        }
+
+        .daRight{
+            .daIMG{
+                align-items: center;
+                text-align: center;
+                img{
+                    width: 80%;
+                }
+
+                .botIMG{
+                    width: 80%;
+                }
+            }
+        }
+    }
+}
+
