--- a/sass/_fleischversand.scss
+++ b/sass/_fleischversand.scss
@@ -1,9 +1,9 @@
 .fleischversand { 
     height: 50vh;
-    background-image: url("../img/krmetina.png");
+    background-image: url("../img/meat.png");
     background-color: black;
+    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: center;
 
     display: flex;
     flex-direction: column;
