--- a/sass/_grillkurs.scss
+++ b/sass/_grillkurs.scss
@@ -51,7 +51,16 @@
             width: 100%;
 
         }
-
     }
+}
 
+@media only screen and (max-width: 1100px){
+    .grillkurs{
+        flex-direction: column;
+        padding-top: 3em;
+
+        .grillleft{
+            padding-bottom: 3em;
+        }
+    }
 }
